feat(apps/api): implement and test GetFuseLeveragedTokensByChainId (#93)
* feat(apps/api): implement and test GetFuseLeveragedTokensByChainId

* fix(apps/api): use const intead of let in for-loop
